# graspp-25S-Wealth-Consumption

./: README.md  Test.py  main.py  pyproject.toml  requirements.txt
data/: README.md
data/clean/EU/: merged_eu_data.csv
data/clean/japan/: merged_macro_data.csv
data/processing_data/japan/: processed_household_consumption.csv
data/raw data/EU/: consumption.csv  eu_income.xlsx  finance.csv  housing_wealth.csv  income.csv
data/raw data/japan/: employment_income.xlsx  household_consumption.xlsx  housing_wealth.csv
docs/: README.md
figures/: README.md
notebooks/: README.md  milestone_1.ipynb  milestone_1_update.ipynb
notebooks/assignment_individual/HW1/data/processing_data/japan/: processed_household_stock.csv
notebooks/assignment_individual/HW1/data/raw data/japan/: employment_income.xlsx  household_stock.xlsx
notebooks/data/processing_data/japan/: processed_employment_income.csv
notebooks/data/raw data/japan/: employment_income.xlsx
reports/: README.md
src/: README.md  download_data.py  eu_data_download.py
src/dashboard_app/: japan_dashboard.py
src/data_function/: extract_employment_income.py  extract_household_consumption.py  extract_housing_and_stock.py
src/raw data/: housing-wealth.csv
