[project]
name = "graspp-25s-wealth-consumption"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "jupyter==1.1.1",
    "lxml>=5.3.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "requests>=2.32.3",
    "statsmodels>=0.14.4",
    "wordcloud>=1.9.4"
]
